# reporting-pipeline-sim-broker

./: .gitignore  README.md  config.yml  pyproject.toml  worklog.md
pipeline/ingest/: bronze_writer.py  config.yml
reporting_service.egg-info/: SOURCES.txt  top_level.txt
sb_pipeline/: dbt_project.yml
src/pipeline/: cli.py
src/pipeline/ingest/: bronze_writer.py  config.yml
src/pipeline/reporting/: html_report.py
src/pipeline/reporting/templates/: desk_pnl.html.j2
src/pipeline/utils/: duck_helpers.py  spark_helper.py  test_helpers.py
src/reporting_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sb_pipeline/: .user.yml  profiles.yml
src/sb_pipeline/models/gold/: fact_pnl_daily.sql  fact_trade.sql
src/sb_pipeline/models/silver/: silver_trades.sql
tests/: test_ingest.py
tests/integration/: test_end_to_end.py  test_full _pipeline.py
tests/unit/: test_ingest.py  test_silver_gold.py
